examples/test/testpolicy19838.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19838
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key13: value37
      key19: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value48
          key32: value44
          key9: value8
      podSelector:
        matchLabels:
          key19: value14
          key36: value19
